--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,6 +17,7 @@ $text-lime: #bfee50;
 
 // span and border
 $span-crimson: #dc143c;
+$span-gold: #ead2a1;
 $span-brand: #f72751;
 $span-violet: violet;
 $span-blue: #0000ff;
@@ -24,6 +25,7 @@ $span-crimson-dark: #dc143c8c;
 $span-orange: tomato ;
 $trans-border: rgba(255, 255, 255, 0.155);
 // link colors
+$link-gold: #ead2a1;
 $link-blue: skyblue;
 $link-crimson: #dc143c;
 $link-crimson-dark:#b60f30;
