--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -96,7 +96,7 @@
             line-height: 2em;
 
             span {
-                color: $text-light-d;
+                color: $span-gold;
             }
         }
         // skills top 'down arrow'
