--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ hamburger
       #skills .skills-top p {
         font-size: 1em; } }
     #skills .skills-top p span {
-      color: #ddd; }
+      color: #ead2a1; }
   #skills .skills-top::after {
     content: '';
     position: absolute;
@@ -570,7 +570,7 @@ hamburger
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #485563;
+        background-color: #29323c;
         box-shadow: inset 3px 3px 4px #fffa, inset -3px -3px 4px #000a, 5px 5px 3px rgba(0, 0, 0, 0.4);
         border-radius: 10px;
         z-index: -2;
@@ -596,7 +596,7 @@ hamburger
           left: 0;
           width: 100%;
           height: 100%;
-          background-color: #29323c;
+          background-color: #20262e;
           z-index: -1;
           border-radius: 10px;
           transition: .5s ease;
@@ -825,7 +825,7 @@ hamburger
             box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a; }
           #projects .projects .all-projects .project-item .project-tile a i {
             transition: .2s;
-            color: #bfee50;
+            color: #ead2a1;
             font-size: .8em;
             padding: .2em;
             margin-right: .5em; }
@@ -833,15 +833,15 @@ hamburger
               content: 'view project';
               font-family: "Gruppo", cursive;
               font-style: italic;
-              color: #bfee50;
+              color: #ead2a1;
               transition: .3s;
               opacity: 0;
               margin-left: 1em;
               transition: .3s ease; }
           #projects .projects .all-projects .project-item .project-tile a:hover h2 {
-            color: #bfee50; }
+            color: #ead2a1; }
           #projects .projects .all-projects .project-item .project-tile a:hover i {
-            color: #bfee50; }
+            color: #ead2a1; }
             #projects .projects .all-projects .project-item .project-tile a:hover i::after {
               color: #ddd;
               margin-left: .2em;
@@ -1535,7 +1535,7 @@ body {
         left: 5vw; }
         #header .header #navbar .nav-list .links-container figcaption a span {
           display: block;
-          color: #fffa;
+          color: #ead2a1;
           padding: .4em 0; }
           #header .header #navbar .nav-list .links-container figcaption a span i {
             margin-left: .5em;
@@ -1594,9 +1594,9 @@ body {
           #header .header #navbar .nav-list ul li:hover {
             transition: .3s; }
             #header .header #navbar .nav-list ul li:hover a {
-              color: skyblue; }
+              color: #ead2a1; }
               #header .header #navbar .nav-list ul li:hover a i {
-                color: skyblue; }
+                color: #ead2a1; }
           #header .header #navbar .nav-list ul li:hover a::after {
             transform: translate(-50%, -50%) scale(1);
             letter-spacing: initial; }
