--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -71,7 +71,7 @@
                     left: 0;
                     width: 100%;
                     height: 100%;
-                    background-color: $overlay-blue-light;
+                    background-color: $overlay-blue-dark;
                     box-shadow: inset 3px 3px 4px #fffa,
                                 inset -3px -3px 4px #000a,
                                         5px 5px 3px rgba(0, 0, 0, 0.400);
@@ -118,7 +118,7 @@
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        background-color: $overlay-blue-dark;
+                        background-color: $overlay-blue-darker;
                         z-index: -1;
                         border-radius: 10px;
                         transition: .5s ease;
