--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,7 +73,7 @@ body {
                     // text-shadow: 0 0 5px $text-shadow-red;
                     
                     span {
-                        color: $span-crimson;
+                        color: $span-gold;
                         font-size: 1.3em;
                     }
                 }
@@ -506,7 +506,7 @@ body {
             // ::after = background gradient
             &::after {
                 opacity: 1;
-                background-image: linear-gradient(90deg,#dc143c, $overlay-blue-light);
+                background-image: linear-gradient(90deg, $overlay-blue-dark, $overlay-blue-dark);
                 background-position: 0, 0;
                 background-size: 300%;
                 z-index: -1;
@@ -541,7 +541,7 @@ body {
                 position: relative;
                 display: inline-block;
                 text-transform: uppercase;
-                color: $text-white;
+                color: $span-gold;
                 font-size: 2em;
                 font-weight: 700;
                 animation: animate 3s ease-in-out infinite;
@@ -839,8 +839,8 @@ body {
                 }
 
                 font-size: 1em;
-                background-image: linear-gradient(0deg, #dc143c, #000);
-                color: #fff;
+                background: linear-gradient(0deg, #161616, $overlay-blue-darker 10%, $overlay-blue-dark);
+                color: $span-gold;
                 margin: 0 auto;
                 padding: 1em;
                 box-shadow: inset 5px 0px 5px #c7c7c7aa,
@@ -851,7 +851,7 @@ body {
 
                 a {
                     transition: .3s ease;
-                    color: $text-white;
+                    color: $span-gold;
                     text-shadow: $text-shadow-sm;
                     display: flex;
                     flex-direction: column;
@@ -859,7 +859,7 @@ body {
                     position: relative;
 
                     i {
-                        background-image: linear-gradient(60deg, #fff 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
+                        background-image: linear-gradient(60deg, $span-gold 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
                         background-size: 300%;
                         background-position: right;
                         background-clip: text;
