--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -255,7 +255,7 @@
                             position: relative;
                             transform: translateY(100%);
                             opacity: 0;
-                            transition: .3s ease;
+                            transition: 1s ease;
                         }
                     }
                     // end of form link
