--- a/scss/style.scss
+++ b/scss/style.scss
@@ -120,12 +120,8 @@ body {
                     &.active {
                         left: 0;
                         .nav-logo {
-
-                            img {
-                                transition: 1s ease 1s;
-                                transform: translateY(0);
-                                opacity: 1;
-                            }
+                            opacity: 1;
+                            transform: translateX(0);
                         }
                         ul li {
                             transition: .5s;
@@ -176,15 +172,14 @@ body {
                         overflow: hidden;
                         position: sticky;
                         top: 1em;
-                        transition: .5s ease .2s;
+                        transform: translateX(50%);
+                        transition: 1s ease .2s;
                     
 
                         img {
                             width: 100%;
                             height: 100%;
                             object-fit: cover;
-                            transform: translateY(100%);
-                            opacity: 0;
                         }
                     }
 
